tests/fixtures/invalid/pow_none_set_bytes.py
# Cannot call pow() with None, Set[int], Bytes
x = pow(None, {1, 2, 3}, b"hello")
